# Python-Scripts

./: .gitignore  3.23.0  3.4.2.17  AI_DUPLICATE_DETECTION_SUMMARY.md  AnalyseADSB.py  CADORS_NATIONAL_20201117_E.xml  CLEANUP_UNNAMED_README.md  GEDCOM_IMPORT_README.md  NAME_STRUCTURE_ISSUES.md  NAMING_CONVENTIONS.md  PIPELINE_TEST_SUMMARY.md  PREPROCESSING_ANALYSIS.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  analyze_name_structure.py  app.py  brisque.py  cleanup_unnamed_people.py  find_and_merge_duplicates.py  fix_margaret_record.py  flights4.json  genealogy_pipeline_test_results.txt  preprocess_names_for_matching.py  test_genealogy_pipeline.py  test_multilanguage.py  test_name_parsing_examples.py
Ex_Files_Python_EssT/Exercise Files/Chap03/: types.py
Ex_Files_Python_Excel/Exercise Files/: fileRead.py  modified.xlsx
Ex_Files_Web_Scraping_Python/Exercise Files/: RFC 1149 - Standard for the transmission of IP datagrams on avian carriers.html
GedMerge/: .gitignore  BUG_REPORT_DATE_MATCHING.md  CONTINUAL_LEARNING.md  CONTINUAL_LEARNING_SUMMARY.md  GENEALOGY_MATCHING_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  LANGUAGE_SUPPORT.md  ML_DOCUMENTATION.md  ML_QUICKSTART.md  PYTHON_3.11_OPTIMIZATIONS.md  QUICK_REFERENCE_INVESTIGATION.md  README.md  README_ML.md  VALIDATION_FEATURES.md  analyze_cleanup.py  analyze_multilingual.py  analyze_places.py  demo_language_support.py  explore_place_hierarchy.py  explore_place_hierarchy2.py  multilingual_analysis.txt  phonetics.py  pyproject.toml  show_equivalency_tables.py  test_adapter.py  test_cleaning_simple.py  test_french_name_fixes.py
GedMerge/GEDCOM/: JOEL.GED
GedMerge/docs/: DATE_DECODING_AND_AUDIT_TRAIL.md  DUPLICATE_DETECTION.md  GAZETTEER_REQUIREMENTS.md  GEDCOM_IMPORT_README.md  TODO.md
GedMerge/examples/: multilingual_places_demo.py
GedMerge/gedmerge/: __init__.py
GedMerge/gedmerge/core/: event.py  family.py  gedcom_parser.py  person.py  place.py
GedMerge/gedmerge/data/: language_support.py  noble_titles.json  place_name_variants.json  reference_loader.py
GedMerge/gedmerge/matching/: __init__.py  matcher.py  scorer.py
GedMerge/gedmerge/merge/: __init__.py  conflict_resolver.py  merger.py
GedMerge/gedmerge/ml/: __init__.py  active_learning.py
GedMerge/gedmerge/ml/data/: __init__.py  data_generator.py  dataset.py
GedMerge/gedmerge/ml/feedback/: __init__.py
GedMerge/gedmerge/ml/models/: __init__.py  duplicate_detector.py  language_detector.py  name_matcher.py  quality_classifier.py  relationship_gnn.py
GedMerge/gedmerge/ml/monitoring/: __init__.py  performance_monitor.py  retraining_scheduler.py
GedMerge/gedmerge/ml/training/: __init__.py  incremental_trainer.py  trainer.py
GedMerge/gedmerge/ml/utils/: __init__.py  config.py  feature_extractor.py  model_registry.py
GedMerge/gedmerge/rootsmagic/: __init__.py  adapter.py  models.py
GedMerge/gedmerge/ui/: cli.py
GedMerge/gedmerge/utils/: README.md  ai_name_analyzer.py  audit_trail.py  date_decoder.py  geocoding.py  name_cleaner.py  name_parser.py  place_cleaner.py
GedMerge/gedmerge/validation/: __init__.py  confidence_tier.py  date_validator.py  genealogical_rules.py  generation_validator.py  living_status.py
GedMerge/gedmerge/web/: __init__.py
GedMerge/gedmerge/web/api/: continual_learning.py  main.py
GedMerge/gedmerge/web/templates/: dashboard.html
GedMerge/models/: feedback.db
GedMerge/scripts/: analyze_name_structure.py  cleanup_unnamed_people.py  find_and_fix_duplicate_places.py  find_and_merge_duplicates.py  import_gedcom_to_rmtree.py  preprocess_names_for_matching.py  test_name_parsing_pipeline.py
GedMerge/tests/: test_cleaning.py  test_cli.py  test_continual_learning.py  test_date_decoder.py  test_event.py  test_family.py  test_gedcom_parser.py  test_matcher.py  test_merger.py  test_ml_models.py  test_name_parser.py  test_person.py  test_place.py  test_reference_data.py  test_validation.py
ieft_scraper/: scrapy.cfg
ieft_scraper/ieft_scraper/: items.py  middlewares.py  pipelines.py  settings.py
ieft_scraper/ieft_scraper/spiders/: ietf.py
